<resources>
    <string name="app_name">CinePulse</string>
    <string name="background">Background</string>
    <string name="cinepulsewhitelogo">CinePulseWhiteLogo</string>
    <string name="cinepluswhitelogo">cinepluswhitelogo</string>
    <string name="maincinepulsewhitelogo">MainCinePulseWhiteLogo</string>
    <string name="backgroundimage">BackgroundImage</string>
    <string name="thecinelogo">TheCineLogo</string>
    <string name="swipe">SWIPE</string>
    <string name="swipelogo">SwipeLogo</string>
    <string name="backgroundlogin">BackgroundLogin</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_a_member_sign_up">Not a member? <u>Sign Up</u></string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_member_log_in">Already a member? <u>Log in</u></string>
    <string name="create_account">Create Account</string>

    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_wishlist">Wishlist</string>
    <string name="nav_trailer">Trailer / Clips</string>
    <string name="nav_profile">Profile</string>
    <string name="play_button" />


    <style name="Theme.MyApp" parent="Theme.MaterialComponents.Light.NoActionBar">
        <item name="android:windowFullscreen">true</item>
        <item name="android:windowNoTitle">true</item>


    </style>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trailer_thumbnail">Trailer thumbnail</string>
    <string name="tv_show_title">Tv Show Title</string>
    <string name="tv_show_poster">Tv Show Poster</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_title">Movie Title</string>
    <string name="remove">Remove</string>
    <string name="genre">Genre</string>
    <string name="castimage">castimage</string>
    <string name="watchlist">Watchlist</string>
    <string name="your_watchlist_is_empty">Your watchlist is empty!</string>
    <string name="clear_all">Clear All</string>
    <string name="cast">Cast</string>
    <string name="cast_information_is_not_available_for_this_title">Cast information is not available for this title.</string>
    <string name="available_on">Available On</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="search_by_movie_title_or_actor">Search by movie title or actor</string>
    <string name="view_reviews">View Reviews</string>
    <string name="reviews">Reviews</string>
    <string name="by_movieguys">By: MovieGuys</string>
    <string name="review_content_goes_here">Review content goes here…</string>
    <string name="no_reviews_available">No reviews available</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="need_help_visit_support">Need help? Visit Support</string>
    <string name="trending_movies">Trending Movies</string>
    <string name="trending_tv_shows">Trending TV Shows</string>
    <string name="movies_and_tv_shows_genres">Movies and TV Shows Genres</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="latest_series">Latest Series</string>
    <string name="genre_movies">Genre - Movies</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="all_genres">All Genres</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="swipeSplash">SWIPE →</string>
    <string name="castMovieDetails">Cast</string>
    <string name="available_onMovieDetails">Available On</string>
    <string name="cast_information_is_not_available_for_this_titleMovieDetails">Cast information is not available for this title.</string>
    <string name="add_to_watchlistMovieDetails">Add to Watchlist</string>
    <string name="posterimages">PosterImages</string>
    <string name="no_streaming_providers_available">No streaming providers available</string>
    <string name="no_streaming_providers_availableMovieDetails">No Streaming Providers Available</string>
    <string name="profileuser">profileUser</string>
    <string name="usernameProfile">Username</string>
    <string name="email_example_com">email@example.com</string>
    <string name="new_username">New Username</string>
    <string name="new_email">New Email</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="toggle_theme">Toggle Theme</string>
    <string name="logo">Logo</string>
    <string name="signupbackground">signUpBackground</string>
    <string name="create_accountSignUp">Create Account</string>
    <string name="poster">poster</string>
    <string name="no_streaming_providers_availableTvDetails">No Streaming Providers Available</string>
    <string name="view_reviewsTvDetails">View Reviews</string>
    <string name="provider_name">Provider Name</string>
    <string name="provider">provider</string>
    <string name="welcome_to_cinepulse">Welcome To CinePulse</string>


</resources>