<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        android:orderInCategory="1"
        android:enabled="true" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search"
        android:title="@string/nav_search"
        android:orderInCategory="2"
        android:enabled="true" />

    <item
        android:id="@+id/nav_watchlist"
        android:icon="@drawable/ic_wishlist"
        android:title="@string/nav_wishlist"
        android:orderInCategory="3"
        android:enabled="true" />

    <item
        android:id="@+id/nav_populartrailer"
        android:icon="@drawable/ic_populartrailer"
        android:title="@string/nav_trailer"
        android:orderInCategory="4"
        android:enabled="true" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile_user"
        android:title="@string/nav_profile"
        android:orderInCategory="5"
        android:enabled="true" />

</menu>
