<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:id="@+id/backgroundLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/backgroundlogin"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginbackgroundimage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <TextView
            android:id="@+id/welcomeBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_black"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textColor="#DDDDDD"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="17dp"
            android:textColor="#DDDDDD"
            android:textColorHint="#DDDDDD" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="17dp"
            android:textColor="#DDDDDD"
            android:textColorHint="#DDDDDD" />

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#232322"
            android:enabled="false"
            android:padding="5dp"
            android:text="@string/login"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/not_a_member_sign_up"
            android:textColor="#DDDDDD"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>