<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Title -->
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/poppins"
        android:text="@string/watchlist"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="28sp"
        android:textStyle="bold" />

    <!-- Empty State Text -->
    <TextView
        android:id="@+id/textNoWatchlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_watchlist_is_empty"
        android:textSize="18sp"
        android:textColor="?android:attr/textColorSecondary"
        android:layout_centerInParent="true"
        android:fontFamily="@font/poppins"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClearAll"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:text="@string/clear_all"
        android:textColor="@android:color/holo_red_light"
        android:textAllCaps="false"
        tools:ignore="RelativeOverlap" />

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerWatchlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textTitle"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp" />

</RelativeLayout>
